crates/hydracache-db/tests/policy/fail_prepared_empty_key_segments.stderr
error: prepared_query_policy segment list cannot be empty
 --> tests/policy/fail_prepared_empty_key_segments.rs:4:19
  |
4 |       let _policy = prepared_query_policy!(
  |  ___________________^
5 | |         key_segments = [],
6 | |         ttl_secs = 30,
7 | |     );
  | |_____^
  |
  = note: this error originates in the macro `prepared_query_policy` (in Nightly builds, run with -Z macro-backtrace for more info)
