crates/hydracache-db/tests/policy/fail_prepared_empty_key_segments.rs
use hydracache_db::prepared_query_policy;

fn main() {
    let _policy = prepared_query_policy!(
        key_segments = [],
        ttl_secs = 30,
    );
}
